@@ -629,8 +629,8 @@ will read further arguments from the file-descriptor <num>. The arguments read t
 -al, --alter=lax
 When reading an archive, dar will try to workaround data corruption of slice header, archive header and catalogue. This option is to be used as last resort solution when facing media corruption. It is rather and still strongly encourage to test archives before relying on them as well as using Parchive to do parity data of each slice to be able to recover data corruption in a much more effective manner and with much more chance of success. Dar also has the possibility to backup a catalogue using an isolated catalogue, but this does not face slice header corruption or even saved file's data corruption (dar will detect but will not correct such event).
 .TP 20
--G, --multi-thread
-When libdar is compiled against libthreadar, it can make use of several threads. The number of thread is not settable but depends on the number of features activated (compression, encryption, tape marks, sparse file, etc.) that require CPU intensive operations. The load-balancing type per thread used is called "pipeline". As performance gain is little (not all algorithms are adapted to parallel computing) this feature is flagged as experimental: it has not been tested as intensively as other new features and it is not encouraged for use. If you want better performance, use several dar processes each for different directory trees. You'll get several archives instead of one which isolated catalogues can be merged together (no need to merge the backups, just the isolated catalogues) and used as base for the next differential backup. Note: if you want to silent the initial warning about the fact this feature is experimental use -Q option before -G option.
+-G, --multi-thread <crypto>
+When libdar is compiled against libthreadar, it can make use of several threads. The argument defines the number of worker thread used to cipher and decipher the archive. Note that in addition to the worker threads two other thread are used, one to feed the workers and another to gather the result of their work. One of these two thread also hold the rest of the libdar computation work (compression, CRC computation, and so on).
 .TP 20
 -j, --network-retry-delay <seconds>
 When a temporary network error occurs (lack of connectivity, server unavailable, and so on), dar does not give up, it waits some time then retries the failed operation. This option is available to change the default retry time which is 3 seconds. If set to zero, libdar will not wait but rather ask the user whether to retry or abort in case of network error.
